# controllers/object.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"encoding/json"
+	"fmt"
 	"github.com/astaxie/beego"
 	"push-data/models"
 )
@@ -26,7 +27,7 @@ func (o *ObjectController) Post() {
 		o.ServeJSON()
 		return
 	}
-	o.Data["json"] = map[string]string{"ObjectId": objectid}
+	o.Data["json"] = map[string]string{"ObjectId": fmt.Sprint(objectid)}
 	o.ServeJSON()
 }
 
@@ -49,48 +50,24 @@ func (o *ObjectController) Get() {
 	o.ServeJSON()
 }
 
-// @Title GetAll
-// @Description get all objects
+
+// @Title GetPaginateObjectWithName
+// @Description find object by objectid
+// @Param	objectName		query 	string		true		"the object name you want to get"
+// @Param	page		query	int		true		"the page"
+// @Param	count		query	int		true		"the page length"
 // @Success 200 {object} models.Object
 // @Failure 403 :objectId is empty
-// @router / [get]
-//func (o *ObjectController) GetAll() {
-//	obs := models.GetAll()
-//	o.Data["json"] = obs
-//	o.ServeJSON()
-//}
-
-// @Title Update
-// @Description update the object
-// @Param	objectId		path 	string	true		"The objectid you want to update"
-// @Param	body		body 	models.Object	true		"The body"
-// @Success 200 {object} models.Object
-// @Failure 403 :objectId is empty
-// @router /:objectId [put]
-//func (o *ObjectController) Put() {
-//	objectId := o.Ctx.Input.Param(":objectId")
-//	var ob models.Object
-//	json.Unmarshal(o.Ctx.Input.RequestBody, &ob)
-//
-//	err := models.Update(objectId, ob.Score)
-//	if err != nil {
-//		o.Data["json"] = err.Error()
-//	} else {
-//		o.Data["json"] = "update success!"
-//	}
-//	o.ServeJSON()
-//}
-
-// @Title Delete
-// @Description delete the object
-// @Param	objectId		path 	string	true		"The objectId you want to delete"
-// @Success 200 {string} delete success!
-// @Failure 403 objectId is empty
-// @router /:objectId [delete]
-//func (o *ObjectController) Delete() {
-//	objectId := o.Ctx.Input.Param(":objectId")
-//	models.Delete(objectId)
-//	o.Data["json"] = "delete success!"
-//	o.ServeJSON()
-//}
-//
+// @router /page-object-names [get]
+func (o *ObjectController) GetPaginateObjectWithName() {
+	objectName := o.GetString("objectName")
+	page, _ := o.GetInt32("page")
+	count, _ := o.GetInt32("count")
+	ob, err := models.GetPaginateObjectWithObjectName(objectName, page, count)
+	if err != nil {
+		o.Data["json"] = err.Error()
+	} else {
+		o.Data["json"] = ob
+	}
+	o.ServeJSON()
+}
