# models/user.go
@@ -70,13 +70,16 @@ func GetUser(uid string) (u *User, err error) {
 	if err != nil {
 		return nil, err
 	}
+	if i == nil {
+		return nil, nil
+	}
 	var user User
 	err = json.Unmarshal(i.GetValue(), &user)
 	return &user, err
 }
 
 func GetPaginateUsers(pos int32, count int32) ([]*User, error) {
-	listIt, err := BigsetIf.BsGetSlice2(USER, pos, count)
+	listIt, err := BigsetIf.BsGetSlice2(USER, pos*count, count)
 	if err != nil {
 		return nil, err
 	}
@@ -90,4 +93,76 @@ func GetPaginateUsers(pos int32, count int32) ([]*User, error) {
 		listU = append(listU, &u)
 	}
 	return listU, nil
+}
+
+
+
+func GetPaginateObjectInUser(UserID , page, counter int32) ([]*Object, error) {
+	bs := make([]byte, 4)
+	binary.BigEndian.PutUint32(bs, uint32(UserID))
+	k := append(bs, []byte("-")...)
+	listit, err := BigsetIf.BsGetSliceFromItem2(OBJECT_USER, k, counter)
+	if err != nil {
+		return nil, err
+	}
+	if len(listit) == 0 {
+		return nil, nil
+	}
+	key := listit[len(listit) - 1].GetKey()
+	var i int32
+	for i = 0; i < page; i++ {
+		listit, err = BigsetIf.BsGetSliceFromItem2(OBJECT_USER, key, counter)
+		if err != nil {
+			return nil, err
+		}
+		key = listit[len(listit) - 1].GetKey()
+	}
+	listO := []*Object{}
+	for _, i := range listit {
+		o := &Object{}
+		it, err := BigsetIf.BsGetItem2(OBJECT, i.GetValue())
+		if err != nil {
+			return nil, err
+		}
+		err = json.Unmarshal(it.GetValue(), o)
+		if err != nil {
+			return nil, err
+		}
+		listO = append(listO, o)
+	}
+	return listO, nil
+}
+
+
+func GetPaginateObjectWithObjectName(ObjectName string, page, counter int32) ([]*Object, error) {
+	listit, err := BigsetIf.BsGetSliceFromItem2(OBJECT_OBJECT_NAME, generic.TItemKey(ObjectName + "-"), counter)
+	if err != nil {
+		return nil, err
+	}
+	if len(listit) == 0 {
+		return nil, nil
+	}
+	key := listit[len(listit) - 1].GetKey()
+	var i int32
+	for i = 0; i < page; i++ {
+		listit, err = BigsetIf.BsGetSliceFromItem2(OBJECT_OBJECT_NAME, key, counter)
+		if err != nil {
+			return nil, err
+		}
+		key = listit[len(listit) - 1].GetKey()
+	}
+	listO := []*Object{}
+	for _, i := range listit {
+		o := &Object{}
+		it, err := BigsetIf.BsGetItem2(OBJECT, i.GetValue())
+		if err != nil {
+			return nil, err
+		}
+		err = json.Unmarshal(it.GetValue(), o)
+		if err != nil {
+			return nil, err
+		}
+		listO = append(listO, o)
+	}
+	return listO, nil
 }
